--- a/SteelStatics/Base.lproj/Main_iPad.storyboard
+++ b/SteelStatics/Base.lproj/Main_iPad.storyboard
@@ -2081,7 +2081,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="p9g-Pw-QUJ" customClass="SpecificationTextField">
                                                 <rect key="frame" x="556" y="3" width="189" height="30"/>
@@ -3410,7 +3410,7 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="QHJ-2c-GXS" customClass="BaseButton">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="QHJ-2c-GXS" customClass="AddOrderButton">
                                                 <rect key="frame" x="437" y="125" width="136" height="40"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="加入表單" backgroundImage="CustomerDataCard_07.png"/>
